fix locationalignment

--- a/src/Styles/Locations.css
+++ b/src/Styles/Locations.css
@@ -4,5 +4,5 @@
   font-size: 1.3rem;
   text-decoration: underline;
   color: #b48d59;
-  align-self: center;
+  text-align: center;
 }/*# sourceMappingURL=Locations.css.map */
